crates/server/tests/api/services/file/snapshots/api__services__file__update____test_context_wrapped_update_file_should_work.snap
---
source: crates/server/tests/api/services/file/update.rs
expression: body
---
{
  "metadata": {
    "update": "no"
  },
  "tags": [
    "events"
  ]
}
